# eventpulse-data-platform

./: .dockerignore  .env.example  .env.host.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RUNBOOK.md  SECURITY.md  docker-compose.yml  harness.toml  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: tfvars_compute_image.py  tfvars_set_image.py
.github/workflows/: ci.yml  gcp-build-and-deploy.yml  gcp-terraform-plan.yml  terraform-apply-gcp.yml  terraform-drift.yml  terraform-hygiene.yml
data/contracts/: edge_telemetry.yaml  parcels.yaml
data/samples/: README.md  edge_telemetry_drift_add_column.csv  edge_telemetry_quality_fail_duplicate_pk.csv  edge_telemetry_sample.csv  parcels_baseline.xlsx  parcels_drift_add_column.xlsx  (+2 more)
docs/: CONTRACTS.md  COST_HYGIENE.md  DEPLOY_GCP.md  DESIGN.md  DOMAIN.md  DRIFT_DETECTION.md  EDGE_RPI.md  FIELD_OPS.md  HARDWARE.md  IAM_STARTER_PACK.md  LOCAL_DEV.md  MAINTENANCE.md  OBSERVABILITY.md  QUICK_TOUR.md  SCHEMA_DRIFT.md  SECURITY.md  STYLE.md  TEAM_WORKFLOW.md  UI_GUIDE.md  WIF_GITHUB_ACTIONS.md  WORKFLOW.md  architecture.md  data_contracts.md  gcp_deploy.md  ops.md
eventpulse/: __init__.py  api_server.py  config.py  contracts.py  db.py  device_auth.py  gcp_rest.py  gcs_events.py  ingest.py  jobs.py  logging_setup.py  middleware.py  naming.py  quality.py  queueing.py  schema.py
field_ops/: README.md
scripts/: generate_sample_data.py  harness.py  reclaim_stuck.py  terraform_fmt.sh  terraform_fmt_check.sh  web_build.sh  web_lint.sh  web_typecheck.sh
tests/: conftest.py  test_contracts.py  test_device_auth.py  test_gcs_events.py  test_marts.py  test_naming.py  test_quality.py  test_schema.py
web/: index.html  package.json  vite.config.ts
(+70 files in other folders)
