[project]
name = "eventpulse-data-platform"
version = "0.3.5"
description = "Local-first event-driven data platform: ingestion + quality + drift detection + curated outputs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ryne Schroder" }]

dependencies = [
  "fastapi==0.129.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "redis==5.0.8",
  "rq==1.16.2",
  "psycopg2-binary==2.9.9",
  "pandas==2.2.2",
  "openpyxl==3.1.5",
  "pyyaml==6.0.2",
  "requests==2.32.3",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.8.0",
  "pyright>=1.1.0",
  "pre-commit>=3.7.0",
  # Mypy stubs for common third-party libs used by this repo.
  "types-PyYAML>=6.0.0",
  "pandas-stubs>=2.2.0",
  "types-psycopg2>=2.9.0",
  "types-requests>=2.32.0",
]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
